Blender 2.80 Beta don't show 3d Mouse navigation guide #58850

Closed
opened 2018-12-06 11:10:00 +01:00 by Bienvenido Sánchez Robles · 3 comments

Operating system: macOS 10.13.6 / Ubuntu 18.04 LTS
Graphics card: Intel HD Graphics 4000 1536 MB

macOS:
2.80 Beta, Date: 2018-12-03 23:39, Hash: 1b6a394d86, Branch: blender2.8

GNU/Linux 64 bits:
2.80 Beta, Date: 2018-12-06 00:33, Hash: c0a71b8369, Branch: blender2.8

Short description of error

When we have activate show navigation guide in 3d mouse settings, it don´t show the guide. This happens in macOS and Ubuntu.

Exact steps for others to reproduce the error
You can watch in this video:

Blender 2 80 Beta 3D Mouse navigation guide

Note: the blender black icon is made for me, to fast differentiate the versions but is official Blender 2.80 Beta.

Operating system: macOS 10.13.6 / Ubuntu 18.04 LTS Graphics card: Intel HD Graphics 4000 1536 MB **macOS:** 2.80 Beta, Date: 2018-12-03 23:39, Hash: 1b6a394d862, Branch: blender2.8 **GNU/Linux 64 bits:** 2.80 Beta, Date: 2018-12-06 00:33, Hash: c0a71b8369a, Branch: blender2.8 **Short description of error** When we have activate show navigation guide in 3d mouse settings, it don´t show the guide. This happens in macOS and Ubuntu. **Exact steps for others to reproduce the error** You can watch in this video: [Blender 2 80 Beta 3D Mouse navigation guide ](https://youtu.be/46sDp34RKvg) Note: the blender black icon is made for me, to fast differentiate the versions but is official Blender 2.80 Beta.

Added subscriber: @BienvenidoSanchez

Added subscriber: @BienvenidoSanchez
Campbell Barton was assigned by Sebastian Parborg 2018-12-07 13:33:22 +01:00

This issue was referenced by 9a8b6d51c1

This issue was referenced by 9a8b6d51c129aec9385b83391745ce4ac38e953b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58850
No description provided.