Fix T58850: NDOF navigation guide not shown